syntax = "proto3";
package cosmospoly.lockproxy;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/Switcheo/polynetwork-cosmos/x/lockproxy/types";

// Msg defines the Msg service.
service Msg {
    // this line is used by starport scaffolding # proto/tx/rpc
  rpc Create(MsgCreate) returns (MsgCreateResponse);
  rpc Bind(MsgBind) returns (MsgBindResponse);
  rpc Lock(MsgLock) returns (MsgLockResponse);
}

// this line is used by starport scaffolding # proto/tx/message
message MsgCreate {
  option (gogoproto.goproto_getters) = false;

  string creator = 1;
}

message MsgCreateResponse { }

message MsgBind {
  option (gogoproto.goproto_getters) = false;

  string creator = 1;
  string denom = 2;
  bytes lock_proxy_hash = 3 [(gogoproto.moretags) = "yaml:\"lock_proxy_hash\""];
  uint64 native_chain_id = 4 [(gogoproto.moretags) = "yaml:\"native_chain_id\""];
  bytes native_lock_proxy_hash = 5 [(gogoproto.moretags) = "yaml:\"native_lock_proxy_hash\""];
  bytes native_asset_hash = 6 [(gogoproto.moretags) = "yaml:\"native_asset_hash\""];
}

message MsgBindResponse { }

message MsgLock {
  option (gogoproto.goproto_getters) = false;

  string denom = 1;
  bytes from_lock_proxy = 2 [(gogoproto.moretags) = "yaml:\"from_lock_proxy\""];
  string from_address = 3 [(gogoproto.moretags) = "yaml:\"from_address\""];
  bytes from_asset_id = 4 [(gogoproto.moretags) = "yaml:\"from_asset_id\""];
	uint64 to_chain_id = 5 [(gogoproto.moretags) = "yaml:\"to_chain_id\""];
	bytes to_lock_proxy = 6 [(gogoproto.moretags) = "yaml:\"to_lock_proxy\""];
	bytes to_asset_id = 7 [(gogoproto.moretags) = "yaml:\"to_asset_id\""];
	bytes to_address = 8 [(gogoproto.moretags) = "yaml:\"to_address\""];
  string amount = 9 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags)   = "yaml:\"amount\"",
    (gogoproto.nullable)   = false
  ];
	bool deduct_fee_in_lock = 10;
	string fee_amount = 11 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags)   = "yaml:\"fee_amount\"",
    (gogoproto.nullable)   = false
  ];
	string fee_address = 12  [(gogoproto.moretags) = "yaml:\"fee_address\""];
}

message MsgLockResponse { }
